@@ -73,11 +73,28 @@
 						<div class="rtattachmentdialog" id="rtattachmentdialog-{$message.id}-{$attachment@index}" title="{$attachment.filename}" style="display: none;">
 							<img src="?m=rtmessageview&tid={$ticket.ticketid}&mid={$message.id}&file={$attachment.filename}" style="width: 100%;">
 						</div>
+						{elseif preg_match('/audio\/(mp3|ogg|oga|wav)/', $attachment.contenttype)}
+						<div class="rtattachmentdialog" id="rtattachmentdialog-{$message.id}-{$attachment@index}" title="{$attachment.filename}" style="display: none;">
+							<audio src="?m=rtmessageview&tid={$ticket.ticketid}&mid={$message.id}&file={$attachment.filename}" style="width: 100%;" controls preload="none">
+							{trans("Your browser does not support the audio element.")}
+							</audio>
+						</div>
+						{elseif preg_match('/video\/(mp4|ogg|webm)/', $attachment.contenttype)}
+						<div class="rtattachmentdialog" id="rtattachmentdialog-{$message.id}-{$attachment@index}" title="{$attachment.filename}" style="display: none;">
+							<video src="?m=rtmessageview&tid={$ticket.ticketid}&mid={$message.id}&file={$attachment.filename}" style="width: 100%;" controls preload="none">
+							{trans("Your browser does not support the video element.")}
+							</video>
+						</div>
 						{/if}
 						<A href="?m=rtmessageview&tid={$ticket.ticketid}&mid={$message.id}&file={$attachment.filename}"
+							id="rtattachment-{$message.id}-{$attachment@index}"
+							data-rtattachment-dialog-id="rtattachmentdialog-{$message.id}-{$attachment@index}"
 							{if preg_match('/image\/(jpeg|png|gif)/', $attachment.contenttype)}
-								class="rtattachment" id="rtattachmenttooltip-{$message.id}-{$attachment@index}"
-								data-rtattachment-dialog-id="rtattachmentdialog-{$message.id}-{$attachment@index}"
+								class="rtattachment rtattachment-image"
+							{elseif preg_match('/audio\/(mp3|ogg|oga|wav)/', $attachment.contenttype)}
+								class="rtattachment rtattachment-audio"
+							{elseif preg_match('/video\/(mp4|ogg|webm)/', $attachment.contenttype)}
+								class="rtattachment rtattachment-video"
 							{/if}>
 							{$attachment.filename} <IMG src="img/attach.gif" alt="">
 						</A>
